--- a/config_voltage.json
+++ b/config_voltage.json
@@ -1,7 +1,7 @@
 {
   "sampling_time":0.0,
   "refresh_rate":0.0,
-  "output_file_name":"kapton_daq",
+  "output_name":"kapton_daq",
   "measurements":{
     "voltage":{
       "protocol":"usbtmc",
