--- a/config/config_current.json
+++ b/config/config_current.json
@@ -1,7 +1,7 @@
 {
   "sampling_time":0.0,
   "refresh_rate":0.0,
-  "output_name":"kapton_daq",
+  "output_name":"current_daq",
   "measurements":{
     "current":{
       "instrument":"dmm6500",
