--- a/config/config_virtual.json
+++ b/config/config_virtual.json
@@ -1,7 +1,7 @@
 {
   "sampling_time":0.0,
   "refresh_rate":0.1,
-  "output_name":"kapton_daq",
+  "output_name":"virtual_daq",
   "measurements":{
     "virtual_voltage":{
       "instrument":"virtual",
