--- a/config/config_voltage.json
+++ b/config/config_voltage.json
@@ -1,7 +1,7 @@
 {
   "sampling_time":0.0,
   "refresh_rate":0.0,
-  "output_name":"kapton_daq",
+  "output_name":"voltage_daq",
   "measurements":{
     "voltage":{
       "instrument":"dmm6500",
