Add baud rate entry in config dict

--- a/config/config_default.json
+++ b/config/config_default.json
@@ -15,6 +15,7 @@
     "temperature":{
       "instrument":"fluke3000",
       "protocol":"serial",
+      "baud":115200,
       "device":"/dev/ttyUSB0",
       "quantity":"temperature",
       "scale":1,
@@ -24,6 +25,7 @@
     "voltage":{
       "instrument":"fluke3000",
       "protocol":"serial",
+      "baud":115200,
       "device":"/dev/ttyUSB0",
       "quantity":"voltage",
       "scale":4000,
