--- a/config/config_virtual.json
+++ b/config/config_virtual.json
@@ -12,6 +12,16 @@
       "name":"Voltage",
       "unit":"V",
       "value":0.0
+    },
+    "virtual_current":{
+      "instrument":"virtual",
+      "protocol":"virtual",
+      "device":"virtual1",
+      "quantity":"virtual",
+      "scale":1,
+      "name":"Current",
+      "unit":"C",
+      "value":0.0
     }
   }
 }
