--- a/config/config_default.json
+++ b/config/config_default.json
@@ -2,35 +2,47 @@
   "sampling_time":0.0,
   "refresh_rate":0.0,
   "output_name":"kapton_daq",
-  "measurements":{
-    "current":{
-      "instrument":"dmm6500",
-      "protocol":"usbtmc",
-      "device":"/dev/usbtmc0",
-      "quantity":"current",
-      "scale":1000000000,
-      "name":"Current",
-      "unit":"nA"      
+  "instruments":{
+    "dmm6500":{
+      "type":"multimeter",
+      "make":"generic_scpi",
+      "model":"SCPIMultimeter",
+      "comm":"file",
+      "comm_args":{
+        "filename":"/dev/usbtmc0"
+      },
+      "measurements":{
+        "current":{
+          "quantity":"current_dc",
+          "scale":1.0e9,
+          "name":"Current",
+          "unit":"nA"
+        }
+      }
     },
-    "temperature":{
-      "instrument":"fluke3000",
-      "protocol":"serial",
-      "baud":115200,
-      "device":"/dev/ttyUSB0",
-      "quantity":"temperature",
-      "scale":1,
-      "name":"Temperature",
-      "unit":"C"
-    },
-    "voltage":{
-      "instrument":"fluke3000",
-      "protocol":"serial",
-      "baud":115200,
-      "device":"/dev/ttyUSB0",
-      "quantity":"voltage",
-      "scale":4000,
-      "name":"Voltage",
-      "unit":"V"
+    "fluke3000":{
+      "type":"multimeter",
+      "make":"fluke",
+      "model":"Fluke3000",
+      "comm":"serial",
+      "comm_args":{
+        "port":"/dev/ttyUSB0",
+        "baud":115200
+      },
+      "measurements":{
+        "temperature":{
+          "quantity":"temperature",
+          "scale":1.0,
+          "name":"Temperature",
+          "unit":"C"
+        },
+        "voltage":{
+          "quantity":"voltage_dc",
+          "scale":1.0,
+          "name":"Voltage",
+          "unit":"V"
+        }
+      }
     }
   }
 }
