--- a/config/config_dmm6500.json
+++ b/config/config_dmm6500.json
@@ -2,15 +2,23 @@
   "sampling_time":0.0,
   "refresh_rate":0.0,
   "output_name":"current_daq",
-  "measurements":{
-    "current":{
-      "instrument":"dmm6500",
-      "protocol":"usbtmc",
-      "device":"/dev/usbtmc0",
-      "quantity":"current",
-      "scale":1000000000,
-      "name":"Current",
-      "unit":"nA"      
+  "instruments":{
+    "dmm6500":{
+      "type":"multimeter",
+      "make":"generic_scpi",
+      "model":"SCPIMultimeter",
+      "comm":"file",
+      "comm_args":{
+        "filename":"/dev/usbtmc0"
+      },
+      "measurements":{
+        "current":{
+          "quantity":"current_dc",
+          "scale":1.0e9,
+          "name":"Current",
+          "unit":"nA"
+        }
+      }
     }
   }
 }
