--- a/config/config_virtual.json
+++ b/config/config_virtual.json
@@ -2,26 +2,30 @@
   "sampling_time":0.0,
   "refresh_rate":0.1,
   "output_name":"virtual_daq",
-  "measurements":{
-    "virtual_voltage":{
-      "instrument":"virtual",
-      "protocol":"virtual",
-      "device":"virtual0",
-      "quantity":"virtual",
-      "scale":1,
-      "name":"Voltage",
-      "unit":"V",
-      "value":0.0
+  "instruments":{
+    "virtual0":{
+      "type":"virtual",
+      "measurements":{
+        "temperature":{
+          "quantity":"value",
+          "name":"Temperature",
+          "scale":1.0,
+          "unit":"C",
+          "value":25.0
+        }
+      }
     },
-    "virtual_current":{
-      "instrument":"virtual",
-      "protocol":"virtual",
-      "device":"virtual1",
-      "quantity":"virtual",
-      "scale":1,
-      "name":"Current",
-      "unit":"C",
-      "value":0.0
+    "virtual1":{
+      "type":"virtual",
+      "measurements":{
+        "temperature":{
+          "quantity":"value",
+          "name":"Voltage",
+          "scale":1.0,
+          "unit":"V",
+          "value":10.0
+        }
+      }
     }
   }
 }
