Ensure measurement units with the  package

--- a/config/config_default.json
+++ b/config/config_default.json
@@ -14,9 +14,8 @@
       "measurements":{
         "current":{
           "quantity":"current_dc",
-          "scale":1.0e9,
-          "name":"Current",
-          "unit":"nA"
+          "unit":"nanoamp",
+          "name":"Current"
         }
       }
     },
@@ -32,15 +31,13 @@
       "measurements":{
         "temperature":{
           "quantity":"temperature",
-          "scale":1.0,
-          "name":"Temperature",
-          "unit":"C"
+          "unit":"celsius",
+          "name":"Temperature"
         },
         "voltage":{
           "quantity":"voltage_dc",
-          "scale":1.0,
-          "name":"Voltage",
-          "unit":"V"
+          "unit":"volt",
+          "name":"Voltage"
         }
       }
     }
