--- a/config/config_glassmanfr.json
+++ b/config/config_glassmanfr.json
@@ -9,29 +9,31 @@
       "model":"GlassmanFR",
       "comm":"serial",
       "comm_args":{
-        "port":"/dev/ttyUSB1",
+        "port":"/dev/ttyUSB0",
         "baud":9600
       },
       "measurements":{
         "voltage":{
           "quantity":"voltage",
-          "scale":1.0,
+          "unit":"volt",
           "name":"PSU Voltage",
-          "unit":"V",
           "value":100.0
         },
         "voltage_sense":{
           "quantity":"voltage_sense",
-          "scale":1.0,
-          "name":"PSU Sense Voltage",
-          "unit":"V"
+          "unit":"volt",
+          "name":"PSU Sense Voltage"
         },
         "current":{
           "quantity":"current",
-          "scale":1.0,
+          "unit":"amp",
           "name":"PSU Current",
-          "unit":"A",
           "value":0.001
+        },
+        "current_sense":{
+          "quantity":"current_sense",
+          "unit":"amp",
+          "name":"PSU Sense Current"
         }
       }
     }
