Centralized communication protocol in one dictionary entry of config file

--- a/config/config_default.yaml
+++ b/config/config_default.yaml
@@ -6,9 +6,10 @@ instruments:
     type: multimeter
     make: generic_scpi
     model: SCPIMultimeter
-    comm: file
-    comm_args:
-      filename: /dev/usbtmc0
+    comm:
+      type: file
+      args:
+        filename: /dev/usbtmc0
     measurements:
       current:
         quantity: current_dc
@@ -18,10 +19,11 @@ instruments:
     type: multimeter
     make: fluke
     model: Fluke3000
-    comm: serial
-    comm_args:
-      port: /dev/ttyUSB0
-      baud: 115200
+    comm:
+      type: serial
+      args:
+        port: /dev/ttyUSB0
+        baud: 115200
     measurements:
       temperature:
         quantity: temperature
