--- a/config/config_keithley485.yaml
+++ b/config/config_keithley485.yaml
@@ -6,11 +6,12 @@ instruments:
     type: instrument
     make: keithley
     model: Keithley485
-    comm: gpibusb
-    comm_args:
-      port: /dev/ttyUSB0
-      gpib_address: 22
-      model: pl
+    comm:
+      type: gpibusb
+      args:
+        port: /dev/ttyUSB0
+        gpib_address: 22
+        model: pl
     measurements:
       current:
         quantity: current_dc
