--- a/config/config_glassmanfr.yaml
+++ b/config/config_glassmanfr.yaml
@@ -6,10 +6,11 @@ instruments:
     type: power_supply
     make: glassman
     model: GlassmanFR
-    comm: serial
-    comm_args:
-      port: /dev/ttyUSB0
-      baud: 9600
+    comm:
+      type: serial
+      args:
+        port: /dev/ttyUSB0
+        baud: 9600
     measurements:
       voltage:
         quantity: voltage
