Refactored virtual devices, WIP on setting power supplies through daq_live.py

--- a/config/config_glassmanfr.yaml
+++ b/config/config_glassmanfr.yaml
@@ -13,6 +13,7 @@ instruments:
         baud: 9600
     measurements:
       voltage:
+        control: True
         quantity: voltage
         unit: volt
         name: PSU Voltage
@@ -22,6 +23,7 @@ instruments:
         unit: volt
         name: PSU Sense Voltage
       current:
+        control: True
         quantity: current
         unit: amp
         name: PSU Current
